[#12]  Added Box on Circle Collision

--- a/SuperGameEngine/SuperGameEngineTests/SuperGameEngineTests.vcxproj
+++ b/SuperGameEngine/SuperGameEngineTests/SuperGameEngineTests.vcxproj
@@ -97,6 +97,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Input\ControllerLayoutFromXMLTests.cpp" />
+    <ClCompile Include="Structural\Spatial\Area\CircleTests.cpp" />
     <ClCompile Include="Structural\Spatial\Area\RectangleTests.cpp" />
   </ItemGroup>
   <ItemGroup>
