--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Structural\Components\Colliders\ColliderComponent.h" />
     <ClInclude Include="Structural\Components\Example\UserInputTestComponent.h" />
     <ClInclude Include="Structural\Components\Gameplay\PlayerControllerComponent.h" />
+    <ClInclude Include="Structural\Components\Physics\SimpleRigidbodyComponent.h" />
     <ClInclude Include="Structural\Components\Spatial\TransformComponent.h" />
     <ClInclude Include="Structural\Components\Visual\SpriteComponent.h" />
     <ClInclude Include="Structural\GameObject\GameComponent.h" />
@@ -203,6 +204,7 @@
     <ClCompile Include="Structural\Components\Colliders\ColliderComponent.cpp" />
     <ClCompile Include="Structural\Components\Example\UserInputTestComponent.cpp" />
     <ClCompile Include="Structural\Components\Gameplay\PlayerControllerComponent.cpp" />
+    <ClCompile Include="Structural\Components\Physics\SimpleRigidbodyComponent.cpp" />
     <ClCompile Include="Structural\Components\Spatial\TransformComponent.cpp" />
     <ClCompile Include="Structural\Components\Visual\SpriteComponent.cpp" />
     <ClCompile Include="Structural\GameObject\GameComponent.cpp" />
