[#22] Made Ridgedbody only depend on a single whole collision cycle
- Whole collision cycle occurs, this keeps it in line, the rigidbody uses another targeted collision later with a single GO.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -384,6 +384,15 @@
     <ClInclude Include="Structural\Components\Physics\SimpleRigidbodyComponent.h">
       <Filter>Project Files\Structural\Components\Physics\API</Filter>
     </ClInclude>
+    <ClInclude Include="Structural\Spatial\Collision\CollisionQuery.h">
+      <Filter>Project Files\Structural\Spatial\Collision\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Structural\Spatial\Collision\CollisionAnswer.h">
+      <Filter>Project Files\Structural\Spatial\Collision\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Structural\Spatial\Collision\CollisionAnswerState.hpp">
+      <Filter>Project Files\Structural\Spatial\Collision\API</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
