--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -177,9 +177,12 @@
     <ClInclude Include="Structural\Spatial\Area\Circle.h" />
     <ClInclude Include="Structural\Spatial\Area\Rectangle.h" />
     <ClInclude Include="Structural\Spatial\Collision\Collision.h" />
+    <ClInclude Include="Structural\Spatial\Collision\CollisionAnswer.h" />
+    <ClInclude Include="Structural\Spatial\Collision\CollisionAnswerState.hpp" />
     <ClInclude Include="Structural\Spatial\Collision\CollisionDectection.h" />
     <ClInclude Include="Structural\Spatial\Collision\CollisionDectectionSubscription.h" />
     <ClInclude Include="Structural\Spatial\Collision\CollisionDectectionUpdate.h" />
+    <ClInclude Include="Structural\Spatial\Collision\CollisionQuery.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Basic\FilesAndFolders.cpp" />
