--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibraryTests/StandardCLibraryTests.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{ad4df83f-166a-4698-8500-be1de9525591}</ProjectGuid>
+    <ProjectGuid>{51315dc7-e26d-4195-917e-d7dbba0f9605}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0.22621.0</WindowsTargetPlatformVersion>
     <ConfigurationType>Application</ConfigurationType>
@@ -98,17 +98,28 @@
   <ItemGroup>
     <ClInclude Include="Collection\Organised\FCollectionSharedTestHelpers.hpp" />
     <ClInclude Include="LibraryIncludes.h" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Collection\Organised\FCollectionTests.cpp" />
     <ClCompile Include="Collection\Organised\FListTests.cpp" />
     <ClCompile Include="Structural\FVector2DTests.cpp" />
+    <ClCompile Include="test.cpp" />
+    <ClCompile Include="pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="Text\FStringTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Logging\Logging.vcxproj">
+      <Project>{fbd9a5d9-bb38-479b-8dd7-1ebd2382a035}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\StandardCLibrary\StandardCLibrary.vcxproj">
       <Project>{3964752b-73c2-4c0e-8bfe-3c42dbef2e03}</Project>
     </ProjectReference>
