[#17] Added the Ability to Draw a Split at a screen location.

--- a/SuperGameEngine/SuperGameEngineTests/SuperGameEngineTests.vcxproj
+++ b/SuperGameEngine/SuperGameEngineTests/SuperGameEngineTests.vcxproj
@@ -117,6 +117,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Engine\Graphics\MockSuperTexture.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
