[#55] Added FText with Wide Strings

--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
@@ -164,6 +164,9 @@
     <ClInclude Include="Collection\Dictionary\FDictionary.hpp">
       <Filter>Project Files\Collection\Dictionary</Filter>
     </ClInclude>
+    <ClInclude Include="Text\FText.h">
+      <Filter>Project Files\Text\API</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Text/FString.cpp">
@@ -222,6 +225,9 @@
     </ClCompile>
     <ClCompile Include="Object\GUID\GuidHelpers.cpp">
       <Filter>Project Files\Object\GUID</Filter>
+    </ClCompile>
+    <ClCompile Include="Text\FText.cpp">
+      <Filter>Project Files\Text</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
